syntax = "proto3";
option csharp_namespace = "Grpc.Server";
package Greet;
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}
message HelloRequest {
  string name = 1;
  enum Laguage{
      en_us =0 ;
      zh_cn =1 ;
  }
  Laguage LaguageEnum = 2;
}
message HelloReply {
  string message = 1;
  int32 num = 2;
  int32 adsa =3;
}
